--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "tmux-terminal:send-redo"
     ]
   },
-  "repository": "https://github.com/atom/tmux-terminal",
+  "repository": "https://github.com/mauricioszabo/atom-tmux-terminal",
   "license": "MIT",
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
